# multi_view_composer

./: .gitignore  README.md  benchmark.py  config.yaml  pyproject.toml  teleop_viewer_improved.py
.claude/: settings.local.json
examples/: benchmark.py  example.py  example_config.yaml
multi_view_composer/: __init__.py  camera.py  config.py  generator.py  layout.py  logging_config.py  overlays.py  template_engine.py
multi_view_composer/examples/: __init__.py  example.py
multi_view_composer/tests/: test_camera.py  test_config.py  test_generator.py  test_layout.py  test_logging.py  test_overlays.py  test_template_engine.py
teleop_view_image_generator/: __init__.py  config.py  generator.py  layout.py  overlays.py  template_engine.py
teleop_view_image_generator/examples/: example.py
teleop_view_image_generator/tests/: test_generator.py
